agregando proxy